# template

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.dvc/: config
.github/workflows/: tests.yml  train_model.yml
data/: .gitignore  fashion-mnist_test.csv.zip.dvc  fashion-mnist_train.csv.zip.dvc
src/: main.py
tests/: test.py
