[tool.poetry]
name = "template"
version = "0.1.0"
description = "Template"
authors = ["Lokesh Mohanty <lokeshm@iisc.ac.in>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^3.51.2"
pre-commit = "^3.7.1"
clearml = "^1.16.1"
dvc-ssh = "^4.1.1"
typer = {extras = ["all"], version = "^0.12.3"}
pylint = "^3.2.2"
pytest = "^8.2.2"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
torch = "^2.3.0"
torchvision = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
